# firmwarescan

./: .firmwarescan.yml  .gitignore  README.md  cli.py  models.py  nvd.py  pyproject.toml  report.py  suppress.py
.cursor/rules/: no-docstrings.mdc
db/: __init__.py  component_db.json  loader.py
docs/: firmwarescan.md  implementation-plan.md
extractors/: __init__.py  binary_extractor.py  cmake_extractor.py  gitmodules_extractor.py  header_extractor.py  makefile_extractor.py  readme_extractor.py
scripts/: add_component.py  fetch_fixtures.py  test_nvd_manual.py  validate_db.py
tests/: test_db_loader.py  test_nvd.py  test_suppress.py
tests/fixtures/binary/: README.md
