[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "firmwarescan"
version = "0.1.0"
description = "Firmware dependency vulnerability scanner for embedded C/C++ projects"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.scripts]
firmwarescan = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["extractors*", "db*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
